--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,41 +7,33 @@ server {
         root /var/www/certbot;
     }
 
-    # Временный прокси для API по HTTP (чтобы проверить работу)
+    # Редирект с HTTP на HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name bar-uk.online www.bar-uk.online;
+
+    ssl_certificate /etc/letsencrypt/live/bar-uk.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bar-uk.online/privkey.pem;
+
+    # Фронтенд (если пусто, будет 403 или 404, это ок, если фронт в другом месте)
+    root /var/www/bar-uk-frontend;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Бэкенд API
     location /api/ {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-    }
-    
-    # Фронтенд по HTTP (пока)
-    root /var/www/bar-uk-frontend;
-    index index.html;
-    location / {
-        try_files $uri $uri/ /index.html;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
-# ПОСЛЕ ПОЛУЧЕНИЯ СЕРТИФИКАТА РАСКОММЕНТИРОВАТЬ ЭТОТ БЛОК И ЗАКОММЕНТИРОВАТЬ ЧАСТЬ ВЫШЕ (кроме ACME)
-# server {
-#     listen 443 ssl;
-#     server_name bar-uk.online www.bar-uk.online;
-#
-#     ssl_certificate /etc/letsencrypt/live/bar-uk.online/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/bar-uk.online/privkey.pem;
-#
-#     root /var/www/bar-uk-frontend;
-#     index index.html;
-#
-#     location / {
-#         try_files $uri $uri/ /index.html;
-#     }
-#
-#     location /api/ {
-#         proxy_pass http://app:3000;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#     }
-# }
