--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
     build: .
     container_name: crm_server
     restart: always
-    # Порт 3000 доступен только внутри сети докера
+    ports:
+      - "3000:3000"
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
@@ -16,6 +17,13 @@ services:
       - PORT=3000
     depends_on:
       - db
+    # Для разработки с Hot Reload:
+    # 1. Раскомментируйте volumes
+    # 2. Измените command на npm run dev
+    volumes:
+       - .:/app
+       - /app/node_modules
+    command: npm run dev
 
   db:
     image: postgres:15-alpine
@@ -39,7 +47,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-      - ../web/client/build/web:/var/www/bar-uk-frontend # Монтируем фронтенд (надо будет загрузить на сервер)
+      - ../web/client/build/web:/var/www/bar-uk-frontend
     depends_on:
       - app
 
