--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migration:generate": "drizzle-kit generate",
     "migration:run": "ts-node src/database/migrate.ts",
-    "migration:push": "drizzle-kit push"
+    "migration:push": "drizzle-kit push",
+    "backup": "ts-node scripts/backup.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
+    "form-data": "^4.0.0",
+    "node-cron": "^3.0.3",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3"
   },
@@ -28,6 +32,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
     "drizzle-kit": "^0.31.8",
     "nodemon": "^3.1.11",
