--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,10 @@ services:
   app:
     build: .
     container_name: crm_server
-    ports:
-      - "3000:3000"
+    restart: always
+    # Порт закрыт наружу - доступен только через nginx внутри Docker
+    # ports:
+    #   - "3000:3000"
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
@@ -14,6 +16,10 @@ services:
       - POSTGRES_DB=${POSTGRES_DB:-crm}
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - PORT=3000
+      # Бэкапы (опционально)
+      - BACKUP_ENABLED=${BACKUP_ENABLED:-false}
+      - BACKUP_CHAT_ID=${BACKUP_CHAT_ID}
+      - BACKUP_SCHEDULE=${BACKUP_SCHEDULE:-0 3 * * *}
     depends_on:
       - db
     # Для разработки с Hot Reload:
@@ -44,7 +50,10 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+      # Локально (относительный путь):
       - ../web/client/build/web:/var/www/bar-uk-frontend
+      # На сервере (если структура другая, замените на абсолютный путь):
+      # - /root/CRM_1_month/web/client/build/web:/var/www/bar-uk-frontend
     depends_on:
       - app
 
