--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "form-data": "^4.0.0",
+    "i18next": "^25.7.4",
     "node-cron": "^3.0.3",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3"
